# ray-tui

./: CMakeLists.txt  README.md
cmake/toolchains/: aarch64-linux-gnu.toolchain.cmake
scripts/: build.sh
src/main/: gameloop.cpp  gameloop.hpp  main.cpp  tui.cpp  tui.hpp
src/main/ecs/: component.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  system.cpp  system.hpp
src/main/input/: input.cpp  input.hpp  raw_inputs.cpp  raw_inputs.hpp
src/main/math/: Ray.hpp  Vec3.hpp  intersection.cpp  intersection.hpp  object.hpp  ray.hpp  shapes.cpp  shapes.hpp  vec3.hpp
src/main/render/: bvh.cpp  bvh.hpp  bvh4.cpp  bvh4.hpp  color.hpp  framebuffer.hpp  render_data.hpp  tui.cpp  tui.hpp
src/main/scene/: color.hpp  geometry.hpp  light.hpp  material.hpp  object.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
src/main/scene/components/: camera.hpp  position.hpp  renderable.hpp
src/main/scene/systems/: movement.cpp  movement.hpp  ray_tracer.cpp  ray_tracer.hpp  renderer.cpp  renderer.hpp
test/: async_stdin.cpp  macos_global_keys.mm  multi_obj.cpp  plane_cast.cpp  raw_inputs.cpp  raytrace_demo.cpp  raytrace_demo_ecs.cpp  tui_gradient.cpp
