cmake_minimum_required(VERSION 3.16)

if(APPLE)
    project(ray-tui LANGUAGES CXX OBJCXX)
else()
    project(ray-tui LANGUAGES CXX)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
option(USE_AVX OFF)
option(USE_ARM OFF)

file(GLOB_RECURSE all_sources src/main/*.cpp src/main/*.hpp)

set(shared_sources ${all_sources})
list(FILTER shared_sources EXCLUDE REGEX ".*/main\\.cpp$")

add_executable(cli ${all_sources})
target_include_directories(cli PUBLIC src/main)
if(APPLE)
    target_link_libraries(cli "-framework ApplicationServices")
elseif(UNIX)
    target_link_libraries(cli X11 Xi)
endif()

if(USE_AVX)
    target_compile_options(cli PRIVATE -msse4.1 -mavx2 -mfma -mbmi)
    target_compile_definitions(cli PRIVATE AVX)
endif()

if(USE_ARM)
    target_compile_options(cli PRIVATE -march=armv8-a+simd)
    target_compile_definitions(cli PRIVATE ARM_NEON)
endif()

enable_testing()

file(GLOB test_sources test/*.cpp)
foreach(test_src ${test_sources})
    get_filename_component(test_name ${test_src} NAME_WE)
    add_executable(${test_name} ${test_src} ${shared_sources})
    target_include_directories(${test_name} PUBLIC src/main)
    if(APPLE)
        target_link_libraries(${test_name} "-framework ApplicationServices")
    elseif(UNIX)
        target_link_libraries(${test_name} X11 Xi)
    endif()
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()

if(APPLE)
    add_executable(macos_global_keys test/macos_global_keys.mm)
    target_include_directories(macos_global_keys PUBLIC src/main)
    target_link_libraries(macos_global_keys "-framework ApplicationServices")
endif()
